Fixed a spacing issue with the direction

--- a/gpsDashboard/stylesheets/gpsdashboard.css
+++ b/gpsDashboard/stylesheets/gpsdashboard.css
@@ -5,10 +5,10 @@
 	font-weight: bold;
 	float: left;
 	margin-bottom: 5px;
-	margin-right: 10px;
+	margin-right: 9px;
 }
 .data {
-	margin-right: 10px;
+	margin-right: 9px;
 	margin-bottom: 5px;
 	float: left;
 }
@@ -21,7 +21,7 @@
 }
 #heading {
 	text-align: center;
-	width: 50px;
+	width: 53px;
 }
 #distTraveled {
 	width: 100px;
